add test for email verification
