# apps/backend/internal/httpserver/routes_auth.go
@@ -4,7 +4,7 @@ func registerAuthRoutes(r *routeCtx) {
 	r.mux.Handle("POST /api/v1/auth/register", r.WrapAuthLimited(r.authH.Register))
 	r.mux.Handle("POST /api/v1/auth/login", r.WrapAuthLimited(r.authH.Login))
 	r.mux.Handle("POST /api/v1/auth/refresh", r.WrapAuthLimited(r.authH.Refresh))
-	r.mux.Handle("POST /api/v1/auth/email/verification/confirm", r.WrapAuthLimited(r.authH.ConfirmEmailVerification))
+	r.mux.Handle("POST /api/v1/auth/email/verification/confirm", r.RequireAuthLimited(r.authH.ConfirmEmailVerification))
 
 	r.mux.Handle("GET /api/v1/auth/me", r.RequireAuth(r.authH.Me))
 	r.mux.Handle("POST /api/v1/auth/logout", r.RequireAuth(r.authH.Logout))
